[package]
name = "cgcamera"
version = "0.2.5"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
edition = "2018"
description = "A library defining camera models for use in real-time computer graphics applications."

[lib]
name = "cgcamera"

[dependencies]
simple_cgmath = { git = "https://github.com/stallmanifold/simple-cgmath" }
