[package]
name = "cgcamera"
version = "0.2.7"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A library defining camera models for use in real-time computer graphics applications."

[lib]
name = "cgcamera"

[dependencies]
lean_cgmath = { git = "https://github.com/lambdaxymox/lean-cgmath" }
